# imlet-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.crates.md  README.md  build.rs
.github/workflows/: rust.yml
assets/models/: bunny_model.json  gyroid_model.json  gyroid_shell_model.json
assets/shaders/: arctic.wgsl  inside_outside.wgsl  line.wgsl  normal.wgsl
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/algorithms/: marching_cubes.rs
engine/src/types/computation/: component.rs  computation_graph.rs  dense_field.rs  implicit_model.rs  mod.rs  model.rs  model_error.rs  scalar_field.rs
engine/src/types/computation/distance_functions/: aabb.rs  capsule.rs  clipping_plane.rs  coordinates.rs  custom.rs  domains.rs  gyroid.rs  line.rs  mesh_sdf.rs  mod.rs  neovius.rs  schwarz.rs  slice.rs  sphere.rs  torus.rs
engine/src/types/computation/functions/: custom_sdf.rs  mod.rs  schwarz.rs
engine/src/types/computation/operations/: arithmetic.rs  boolean.rs  interpolation.rs  math.rs  mod.rs  shape.rs
engine/src/types/computation/traits/: implicit_functions.rs  mod.rs
engine/src/types/geometry/: bounding_box.rs  geometry_collection.rs  hash_grid.rs  line.rs  mesh.rs  mod.rs  octree.rs  plane.rs  sphere.rs  triangle.rs  vec3f.rs  vec3i.rs
engine/src/types/geometry/traits/: mod.rs  signed_distance.rs  spatial_query.rs
engine/src/utils/: io.rs  logging.rs  math_helper.rs
examples/: bird_feeder.rs  bunny.rs  bunny_offset.rs  bunny_sparse.rs  cutom_function.rs  explorer.rs  gyroid.rs  hyperbolic_paraboloid.rs  interp_1.rs  interp_2.rs  interpolation.rs  neovius.rs  run_test.rs  schwarz.rs  show_mesh.rs  sphere.rs
imlet_engine/: Cargo.toml  README.md
imlet_engine/src/: lib.rs
imlet_engine/src/algorithms/: marching_cubes.rs  tables.rs
imlet_engine/src/utils/: io.rs  logging.rs
imlet_viewer/: Cargo.toml  README.md
imlet_viewer/examples/: gyroid.rs  interp_1.rs  neovius.rs  schwarz.rs  sphere.rs
imlet_viewer/src/: material.rs  util.rs  vertex.rs  viewer.rs
implicit_display/: Cargo.toml
implicit_display/examples/: interp_2.rs  schwarz.rs
implicit_display/src/: lib.rs  material.rs  texture.rs  viewer.rs
implicit_engine/: Cargo.toml
implicit_engine/src/: lib.rs
implicit_engine/src/utils/: io.rs
src/: engine.rs  implicit.rs  lib.rs  main.rs  marching_cubes.rs  types.rs  utils.rs  viewer.rs
src/algorithms/: marching_cubes.rs
src/display/: util.rs  viewer.rs
src/display/shaders/: arctic.wgsl
src/engine/: algorithms.rs  types.rs  utils.rs
src/engine/algorithms/: marching_cubes.rs
src/engine/types/: bounding_box.rs  core.rs  data_grid.rs  dense_field.rs  grid.rs  hash_grid.rs  implicit_func.rs  mesh.rs  plane.rs  xyz.rs
src/engine/utils/: implicit_functions.rs  io.rs
src/examples/: bitmask_gyroid.rs  compute_shader.rs  gyroid.rs  run_sphere.rs  shader.wgsl
src/implicit/: marching_cubes.rs  types.rs
src/implicit/types/: core.rs  dense_grid.rs  implicit_functions.rs  triangle_mesh.rs
src/marching_cubes/: algorithm.rs
src/marching_cubes/types/: core.rs  dense_grid.rs
src/types/: core.rs  grid.rs  mesh.rs  triangle_mesh.rs
src/types/computation/: component.rs  computation_graph.rs  implicit_model.rs  mod.rs  model_error.rs  parameter.rs  scalar_field.rs
src/types/geometry/: bounding_box.rs  capsule.rs  geometry_collection.rs  hash_grid.rs  line.rs  mesh.rs  mod.rs  octree.rs  plane.rs  sphere.rs  torus.rs  transform.rs  triangle.rs  vec3f.rs  vec3i.rs
src/utils/: implicit_functions.rs  io.rs  logging.rs  math_helper.rs
src/viewer/: app.rs  camera.rs  camera_controller.rs  custom_layer.rs  display_settings.rs  material.rs  mod.rs  orbit_camera.rs  public_components.rs  raw_mesh_data.rs  shader.wgsl  show_mesh.rs  state.rs  texture.rs  util.rs  utils.rs  vertex.rs  window.rs  window_helper.rs
src/viewer/plugins/: graphics_plugin.rs  log_window_plugin.rs  mesh_viewer_plugin.rs  mod.rs  model_explorer_plugin.rs  model_init_plugin.rs
viewer/: Cargo.toml
viewer/examples/: bunny.rs  custom.rs  gyroid.rs  interp_1.rs  interp_2.rs  interpolation.rs  neovius.rs  schwarz.rs  sphere.rs
viewer/src/: camera_controller.rs  lib.rs  material.rs  scene.rs  state.rs  util.rs  vertex.rs  viewer.rs
viewer/src/shaders/: line.wgsl  normal.wgsl
(+123 files in other folders)
