[package]
name = "imlet"
version = "0.1.0"
edition = "2021"
authors = ["Joel Hilmersson <d.j.hilmersson@gmail.com>"]
description = "A lightweight engine for implicit modeling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joelhi/imlet-rs"
documentation = "https://docs.rs/imlet"
readme = "README.md"
keywords = ["implicit modeling", "mesh generation", "3d geometry", "marching cubes"]
categories = ["3d-geometry","3d-modeling"]
exclude = ["assets/geometry/*","assets/models/*"]

[dependencies]
env_logger = "0.11.3"
erased-serde = "0.4.5"
hashbrown = "0.15.2"
log = "0.4.21"
num-traits = "0.2.19"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
smallvec = "1.13.2"

# Viewer dependencies
wgpu = { version = "23.0.1", optional = true }
winit = { version = "0.30.8", optional = true }
cgmath = { version = "0.18.0", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.12", features = ["derive"], optional = true }

[features]
viewer = ["winit", "wgpu", "cgmath", "pollster", "bytemuck"]