[package]
name = "imlet"
version = "0.1.2"
edition = "2021"
authors = ["Joel Hilmersson <d.j.hilmersson@gmail.com>"]
description = "A lightweight engine for implicit modeling."
license = "MIT OR Apache-2.0"
repository = "https://github.com/joelhi/imlet-rs"
documentation = "https://docs.rs/imlet"
readme = "README.crates.md"
keywords = [
    "implicit",
    "geometry",
    "mesh-generation",
    "3d",
    "marching-cubes"
]
exclude = ["assets/models/*","media",".github/*"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
env_logger    = "0.11.3"
hashbrown     = "0.15.2"
log           = "0.4.21"
num-traits    = "0.2.19"
rayon         = "1.10.0"
smallvec      = "1.13.2"

# serde deps
serde         = { version = "1.0.204", features = ["derive"], optional = true }
serde_json    = { version = "1.0.120", optional = true }
erased-serde  = { version = "0.4.5", optional = true }

# viewer deps
wgpu          = { version = "22.0", optional = true }
winit         = { version = "0.29", optional = true }
cgmath        = { version = "0.18.0", optional = true }
pollster      = { version = "0.3", optional = true }
bytemuck      = { version = "1.12", features = ["derive"], optional = true }

[features]
# viewer bundle
viewer = ["winit", "wgpu", "cgmath", "pollster", "bytemuck"]

# serde bundle
serde = [
    "dep:serde",             
    "dep:serde_json",        
    "dep:erased-serde",      
    "hashbrown/serde"]