[package]
name = "imlet_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
num-traits = "0.2.19"
rayon = "1.10.0"
serde = {version="1.0.204", features = ["derive"]}
serde_json = "1.0.120"
