[package]
name = "imlet_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imlet_engine = { path = "../engine" }
cgmath = "0.18.0"
wgpu = "0.18"
winit = "0.28"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
env_logger = "0.11.3"
log = "0.4.21"
num-traits = "0.2.19"
